cert-manager/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager-cainjector
    app.kubernetes.io/part-of: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-manager-cainjector
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-manager-cainjector
        app.kubernetes.io/part-of: cert-manager
    spec:
      serviceAccountName: cert-manager-cainjector
      containers:
      - name: cert-manager
        image: 'quay.io/jetstack/cert-manager-cainjector:v0.12.0'
        imagePullPolicy: IfNotPresent
        args:
        - --v=2
        - --leader-election-namespace=kube-system
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-manager
        app.kubernetes.io/part-of: cert-manager
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9402'
    spec:
      serviceAccountName: cert-manager
      containers:
      - name: cert-manager
        image: quay.io/jetstack/cert-manager-controller:v0.12.0
        imagePullPolicy: IfNotPresent
        args:
        - --v=2
        - --cluster-resource-namespace=$(POD_NAMESPACE)
        - --leader-election-namespace=kube-system
        - --webhook-namespace=$(POD_NAMESPACE)
        - --webhook-ca-secret=cert-manager-webhook-ca
        - --webhook-serving-secret=cert-manager-webhook-tls
        - --webhook-dns-names=cert-manager-webhook,cert-manager-webhook.cert-manager,cert-manager-webhook.cert-manager.svc
        ports:
        - containerPort: 9402
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: 'cert-manager'
  labels:
    app.kubernetes.io/name: cert-manager-webhook
    app.kubernetes.io/part-of: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-manager-webhook
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-manager-webhook
        app.kubernetes.io/part-of: cert-manager
    spec:
      serviceAccountName: cert-manager-webhook
      containers:
      - name: cert-manager
        image: quay.io/jetstack/cert-manager-webhook:v0.12.0
        imagePullPolicy: IfNotPresent
        args:
        - --v=2
        - --secure-port=10250
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        livenessProbe:
          httpGet:
            path: /livez
            port: 6080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 6080
            scheme: HTTP
        resources: {}
        volumeMounts:
        - name: certs
          mountPath: /certs
      volumes:
      - name: certs
        secret:
          secretName: cert-manager-webhook-tls
