cert-manager/rbac.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager-webhook
    app.kubernetes.io/part-of: cert-manager
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 10250
  selector:
    app.kubernetes.io/name: cert-manager-webhook
    app.kubernetes.io/part-of: cert-manager
