cert-manager/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
  name: cert-manager
  namespace: cert-manager
spec:
  type: ClusterIP
  ports:
  - name: prometheus
    port: 9402
    targetPort: prometheus
  selector:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cert-manager-webhook
    app.kubernetes.io/part-of: cert-manager
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10250
  selector:
    app.kubernetes.io/name: cert-manager-webhook
    app.kubernetes.io/part-of: cert-manager
  type: ClusterIP
